backend/kubernetes/test/pdfshare-cache-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache-instance
  namespace: pdfshare
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cache
  template:
    metadata:
      labels:
        app: cache
    spec:
      containers:
        - name: redis 
          image: pdfshare/cache:local-test
          imagePullPolicy: Never
          ports:
            - containerPort: 6379
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "250m"

---
apiVersion: v1
kind: Service
metadata:
  name: cache-service
  namespace: pdfshare
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector: 
    app: cache
